# mcpp

./: CMakeLists.txt  main.cpp  mcpp.kdev4  testmain.cpp
include/: ex1.h
src/: ex1.cpp
